--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h1 class="sub-title">About Me</h1>
                 <p>I am Deepak currently pursuing BE Computer Science and Engineering.seeking an entry-level position as a Frontend
                     developer.Proficient in programming languages such as Python,
-                    and JavaScript, with strong problem-solving skills. Eager to
+                    and JavaScript, with strong problem-solving skills.Eager to
                     contribute to team success and grow in a dynamic software
                     development environment.</p>
                 
@@ -57,7 +57,7 @@
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>2021-2025</span><br>BE Coputer Science and Engineering.</li>
+                        <li><span>2021-2025</span><br>BE Computer Science and Engineering.</li>
                         <li><span>2019-2021</span><br>Higher Secondary Education.</li>
                         <li><span>2018-2019</span><br>Secondary Education.</li>
                     </ul>
@@ -113,7 +113,7 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-solid fa-paper-plane"></i>deepakselvaraj@003.com</p>
+                <p><i class="fa-solid fa-paper-plane"></i>deepakselvaraj003@gmail.com</p>
                 <p><i class="fa-solid fa-phone"></i>+91 9342894145</p>
                 <div class="social-icon">
                     <a href="https://www.instagram.com/_.de_avgeek._"><i class="fa-brands fa-square-instagram"></i></a>
