--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/icon.png">
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
     <script src="https://kit.fontawesome.com/43b963285a.js" crossorigin="anonymous"></script>
@@ -98,10 +99,12 @@
             <div class="work">
                 <img src="images/work-3.png">
                 <div class="layer">
-                    <h3>News Magazine</h3>
-                    <p>A responsive News Magazine UI built with ReactJS and Bootstrap, featuring a clean and modern design. News articles are dynamically fetched using Fetch API,
-                       ensuring real-time updates and seamless user experience..</p>
-                    <a href="https://github.com/deepakselvaraj003/News-Mag.git"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Food-App</h3>
+                    <p>I have developed a modern and responsive food delivery website using HTML, CSS, JavaScript, and React.js.It smooth animations, interactive elements, and a fully responsive design. This frontend-only project showcases dynamic components, user-friendly navigation</p>
+                    <a href="https://github.com/deepakselvaraj003/Food-App.git"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <p class="p">Source Code</p>
+                    <a target="_blank" href="https://foooodiego.netlify.app"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <p class="p">Live</p>
                 </div>
             </div>
         </div>
