--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <h3>Weather App</h3>
                     <p>A simple and interactive weather app built with React.js that fetches real-time weather data based on user input or location. It displays temperature, humidity, wind speed,
                        and weather conditions with a clean and responsive UI.</p>
-                    <a href="https://github.com/deepakselvaraj003/react-app.git"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <p class="sorc"><a href="https://github.com/deepakselvaraj003/react-app.git"></a>🔗 Source Code</p>
                 </div>                
             </div>
             <div class="work">
@@ -93,7 +93,7 @@
                     <h3>Free Lancer</h3>
                     <p>A freelance landing page designing using HTML, CSS, and JavaScript involves creating visually 
                         appealing and responsive web interfaces.It focuses on user experience, interactivity, and modern design principles.</p>
-                    <a href="https://github.com/deepakselvaraj003/landing_pg.git"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <p class="sorc"><a href="https://github.com/deepakselvaraj003/landing_pg.git"></a>🔗 Source Code</p>
                 </div>
             </div>
             <div class="work">
@@ -101,10 +101,8 @@
                 <div class="layer">
                     <h3>Food-App</h3>
                     <p>I have developed a modern and responsive food delivery website using HTML, CSS, JavaScript, and React.js.It smooth animations, interactive elements, and a fully responsive design. This frontend-only project showcases dynamic components, user-friendly navigation</p>
-                    <a href="https://github.com/deepakselvaraj003/Food-App.git"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    <p class="p">Source Code</p>
-                    <a target="_blank" href="https://foooodiego.netlify.app"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                    <p class="p">Live</p>
+                    <p class="sorc"><a href="https://github.com/deepakselvaraj003/Food-App.git"></a>🔗 Source Code</p>                   
+                    <p class="liv"><a target="_blank" href="https://foooodiego.netlify.app"></a>🔗 Live</p>
                 </div>
             </div>
         </div>
