--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <a href="https://www.instagram.com/_.de_avgeek._"><i class="fa-brands fa-square-instagram"></i></a>
                     <a href="www.linkedin.com/in/deepakselvaraj03"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
-                <a href="images/Resume.pdf" download class="btn">Download Cv</a>
+                <a href="images/Deepak_Resume.pdf" download class="btn">Download Cv</a>
             </div>
             <div class="contact-right">
                 <form  action="https://api.web3forms.com/submit" method="POST" name='submit-to-google-sheet'>
